--- a/inst/styles/style.css
+++ b/inst/styles/style.css
@@ -1,3 +1,11 @@
 body {
   font-size: 12px;
 }
+
+button.btn-hover {
+  visibility: hidden;
+}
+
+tr:hover button.btn-hover {
+  visibility: visible;
+}
